# lightweight-hardening-tool

./: .gitignore  AUTHORS  COPYING  MAINTAINERS  Makefile.am  README.md  configure.ac  groups  hardening.spec.in  project.config
src/: Makefile.am  hardening.8  secure.sh
src/conf_files/: Makefile.am  ntpdate_cron  sshd-banner  sysctl.conf
src/plugins/: Makefile.am  SMTP_conf  add_banner_sshd  at  change_sshd_port  coredump  cron  disable_interactive_startup  disable_ip_forwarding_sshd  disable_ipv6  disable_root_login_sshd  disable_wireless  enable_ip_forward  grub  iptables_all  ntp-client  polyinstantiation  remove_x_windows  remove_xinetd  root_uid_validation  selinux  sftp_enable_chroot  sshd_protocol_2  sudo  sysctl  test_plugin  umask_default  yum_repos_gpg_check
src/profiles/: Makefile.am  base
src/utils/: Makefile.am  cron_at.sh  genpasswd.sh  utils.sh
