#
# hardening -- hardening tool for Linux servers
# Copyright (C) 2014-2015 VMware, Inc. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in \
	$(NULL)

dist_plugins_SCRIPTS = \
	add_banner_sshd \
	at \
	change_sshd_port \
	coredump \
	cron \
	disable_interactive_startup \
	disable_ip_forwarding_sshd \
	disable_ipv6 \
	disable_root_login_sshd \
	disable_wireless \
	enable_ip_forward \
	grub \
	iptables_all \
	ntp-client \
	polyinstantiation \
	remove_xinetd \
	remove_x_windows \
	root_uid_validation \
	selinux \
	sftp_enable_chroot \
	SMTP_conf \
	sshd_protocol_2 \
	sudo \
	sysctl \
	test_plugin \
	umask_default \
	yum_repos_gpg_check \
	$(NULL)
